# streamdeck_uinput

./: .gitignore  README.md  build.py  pyproject.toml  test.py
.github/workflows/: python-publish.yml
streamdeck_uinput/: __init__.py  uinput.c  uinput.py
